Updated changes to env

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
-name: Jekflix
-title: Jekflix | A blog theme for Jekyll
-description: Jekflix is a template for Jekyll inspired by Netflix and made by
+name: Saagara's Blog
+title: Saagara's Blog | Where I share my writings on AI/ML.
+description: Forked from Jekflix, a template for Jekyll inspired by Netflix and made by
   Thiago Rossener.
 tags:
   - blog
@@ -19,7 +19,7 @@ menu:
     url: /contact
   - title: Feed
     url: /feed.xml
-email: youremail@test.com
+email: saagaramanjubaiju@gmail.com
 # See: https://disqus.com/
 disqus_username: disqus_username
 # Contact Form Setting
